# internal/router/whatsapp_routes.go
@@ -12,4 +12,5 @@ func initWhatsappRoutes(r *gin.RouterGroup, h *handler.Handler) {
 		loginGroup.POST("/qr_code/:format", h.WhatsappAuthHandler.LoginQRCode)
 		loginGroup.GET("/status", h.WhatsappAuthHandler.GetLoginStatus)
 	}
+	r.POST("/logout", authMiddleware.JWTAuthentication(), h.WhatsappAuthHandler.Logout)
 }
